--- a/structures.html
+++ b/structures.html
@@ -143,7 +143,7 @@
     </div> -->
 
 
-        <a href="homepage.html" class="logo">Solar System</a>
+        <a href="index.html" class="logo">Solar System</a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
 
