--- a/saturnmain.html
+++ b/saturnmain.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saturn | Outer Planet GAS GIANT SS</title>
+     <link rel="stylesheet" href="css/globals.css" />
     <link rel="stylesheet" href="css/saturnmain.css">
+     <link href="https://fonts.googleapis.com/css?family=TWK+Lausanne&display=swap" rel="stylesheet"/>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
